Graph has data, not aligned correctly

--- a/web/src/app/demo-detail/demo-detail.component.css
+++ b/web/src/app/demo-detail/demo-detail.component.css
@@ -41,3 +41,12 @@ footer {
 .mainText {
     text-align: left;
 }
+
+#chart-container {
+    float: left;
+    display: block;
+}
+
+#chart {
+    height: 40vh;
+}
